--- a/src/style.css
+++ b/src/style.css
@@ -3,24 +3,32 @@ body {
     background: gray;
 }
 
-#game_area {
+#app {
     margin:0 auto;
     top:15%;
     left:25%;
     position: absolute;
     width:1000px;
-    height:600px;
-    background: #EDE4CC;
-    outline:7px groove greenyellow;
+    height:630px;
+    outline:5px groove greenyellow;
 }
 
 #time_bar{
     background: white;
     width:100%;
-    height:5%;
+    height:30px;
+    position: relative;
+}
+
+#game_area{
+    width:100%;
+    height:600px;
+    background: #EDE4CC;
+    position: relative;
 }
 
 #player{
     height: 100px;
-    position: absolute;
+    width: 100px;
+    position: relative;
 }
