--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ body {
 #error_div{
     left: 2%;
     top: 25%;
-    color: green;
+    color: red;
     position: absolute;
     font-size: 20px;
     height:20px;
